<resources>
    <string name="app_name">SubmissionSystem</string>
    
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="rememberLoginCheckBox">Save Credentials</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Upload</string>
    <string name="ok_user_id">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Confirm File upload</string>
    <string name="dialog_message">Please Confirm File upload</string>
    <string name="dialog_title_prompt_user_id">Student Id Required</string>
</resources>
